--- a/Student-Learning-Objectives.Rmd
+++ b/Student-Learning-Objectives.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SLO Animated"
 output: html_document
-runtime: shiny_render
+runtime: shiny
 ---
 
 ```{r, setup, include = FALSE, echo = FALSE, comment = FALSE, warning = FALSE, results = FALSE}
